--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
+    <h1>Morse Translator</h1>
     <div class="container">
-        <h1>Morse Translator</h1>
         <textarea placeholder="Enter your text here and then click translate to convert to morse code" id="input-txt"
             cols="75" rows="10"></textarea>
         <button class="btn-translate">Translate</button>
@@ -23,6 +23,14 @@
         </div>
     </div>
 
+    <footer>
+        <h2 class="footer-header">About</h2>
+        <div class="footer-desc container">
+            Morse code is a method of transmitting text information as a series of
+            on-off tones, lights, or clicks that can be directly understood by a skilled listener or observer without
+            special equipment.
+        </div>
+    </footer>
 </body>
 
 </html>
